src/objects/IntegrationControl__c.object
<CustomObject>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExportID__c</fullName>
        <description>To store Report Export ID for later processing</description>
        <label>ExportID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExportType__c</fullName>
        <label>ExportType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>InvoiceItem</fullName>
                </value>
                <value>
                    <fullName>InvoiceItemAdjustment</fullName>
                </value>
                <value>
                    <fullName>InvoiceAdjustment</fullName>
                </value>
                <value>
                    <fullName>TaxationItem</fullName>
                </value>
                <value>
                    <fullName>RevenueScheduleItemInvoiceItem</fullName>
                </value>
                <value>
                    <fullName>RevenueScheduleItem</fullName>
                </value>
                <value>
                    <fullName>InvoicePayment</fullName>
                </value>
                <value>
                    <fullName>RefundInvoicePayment</fullName>
                </value>
                <value>
                    <fullName>RevenueScheduleItemInvoiceItemAdjustment</fullName>
                </value>
                <value>
                    <fullName>RevenueEventItemInvoiceItem</fullName>
                </value>
                <value>
                    <fullName>RevenueEventItemInvoiceItemAdjustment</fullName>
                </value>
                <value>
                    <fullName>CreditBalanceAdjustment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FileID__c</fullName>
        <label>FileID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastProcessedDate__c</fullName>
        <formula>IF( CONTAINS(Last_Value__c, "T") , DATEVALUE( Last_Value__c) , TODAY())</formula>
        <label>LastProcessedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Value__c</fullName>
        <label>Last Value Processed</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Sent to SAP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>For specific Integration Names, store last processed value</description>
    <label>Integration Control</label>
    <nameField>
        <label>Integration Control Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Controls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>AcctPeriod</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Last_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>ACCTPERIOD</value>
        </filters>
        <label>Accounting Periods</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ExportType__c</columns>
        <columns>Last_Value__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>